1) Fixed an issue where JSON editor preview colours have inappropriate contrast in dark mode. Fixes #6944 2) Fixed JSON Editor scrolling issue in code mode. Fixes #6945

--- a/web/pgadmin/static/scss/_jsoneditor.overrides.scss
+++ b/web/pgadmin/static/scss/_jsoneditor.overrides.scss
@@ -230,7 +230,9 @@ div.jsoneditor td.jsoneditor-tree {
 }
 
 pre.jsoneditor-preview{
- background-color: $color-gray-lighter !important;
+  background-color: $color-gray-lighter !important;
+  opacity: 0.8;
+  color: $color-fg;
 }
 
 
